# ViperLang-Rust

./: Cargo.toml  README.md  old.toml
examples/: if.viper  large.viper  let.viper  obj.viper  proc.viper  simple.txt  simple.viper  struct.viper  test.viper
viper/: Cargo.toml
viper/src/: main.rs
viper_allocator/: Cargo.toml
viper_allocator/src/: allocator.rs  block_meta.rs  bump_allocator.rs  error.rs  lib.rs  memory.rs
viper_ast/: Cargo.toml
viper_ast/src/: ast.rs  binaryop.rs  binding.rs  codeblock.rs  conditional.rs  field.rs  functioncall.rs  lib.rs  methodcall.rs  objinit.rs  procedurecall.rs  proceduredef.rs  structdef.rs  typeast.rs  unaryop.rs  variable_init.rs  whileloop.rs
viper_core/: Cargo.toml
viper_core/src/: _type.rs  buildsystem.rs  datatype.rs  emitter.rs  error.rs  lib.rs  scope.rs  source.rs  span.rs  symbol.rs  token.rs
viper_driver/: Cargo.toml
viper_driver/src/: buildsystem.rs  driver.rs  lib.rs
viper_lexer/: Cargo.toml
viper_lexer/src/: lexer.rs  lib.rs  test.rs
viper_parser/: Cargo.toml
viper_parser/src/: lib.rs  parser.rs  test.rs
viper_semantic/: Cargo.toml
viper_semantic/src/: lib.rs
