[workspace]
resolver = "2"
members = [
    "viper_core",
    "viper",
    "viper_lexer",
    "viper_driver", "viper_ast", "viper_parser", "viper_semantic",
]

[workspace.dependencies]
enum-as-inner = "0.6.0"
thiserror = "1.0.40"
getset = "0.1.2"
proptest = { version = "1.3.1" }
proptest-state-machine = "0.1.0"
derive-new = "0.5.9"
tempfile = "3.5.0"
derive_more = "0.99.17"
memmap = "0.7.0"
ouroboros = "0.18.0"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25"
clap = { version = "4.4.0", features = ["derive"] }
colored = "2.1.0"
substring = "1.4.5"

[workspace.package]
version = "0.1.0"
authors = [""]
description = "The Viper programming language"
edition = "2021"
