[package]
name = "viper_lexer"
version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viper_core = { path = "../viper_core" }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
